# TTool

./: .gitattributes  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  DATAFLOW.md  Dockerfile  Doxyfile  README.md  TODO.md  build.sh  build_docker.sh  configure.sh  input_pose.txt  perf.txt  run.sh  run_cam.sh  trackingPose.txt
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  docker-cmake-build.yml  doxygen-github-page.yml  gen-doxygen-github-page.yml
ai/: .gitignore  class_activation_model.py  classification.py  combine_labels.py  confusion_matrices_fabrication_videos.py  datasets.py  feature_extraction.py  labeled_videos_to_frames.zsh  make_videos_for_inspection.py  model_export.py  model_inference.py  models.py  requirements.txt  resnet.py  split_data.py  split_synthetic_data.py  test_resnet.py  train.py  validate.py  videos_to_frames.sh
ai/cpp_inference/: CMakeLists.txt  config.sh  example-app.cpp  run.sh
ai/torchscripts/: label_map.txt  labels.txt
assets/: config.yml  gt_pose.txt
assets/opengl/: SimpleTransform.vs  SingleColor.fs  TextShader.fs
circular_blade_scaled/: circular_blade_scaled.mtl
cmake/: TToolConfig.cmake.in  classifier.cmake  cmake_uninstall.cmake.in  config.cmake.in  dataset.cmake  dependencies.cmake  external_tools.cmake  options.cmake  ttoolConfig.cmake.in
dev_log/: README.md
docs/: 6dof_pose_estimation.md  CHANGELOG.md  classifier_background_research.md  routine.md
eval/: FolderArrangement.md  Protocol Evaluation for TTool.odt  README.md  UIUsability.md  User Experience Questionnaire Results.txt  environment.yml  evaluate.sh  readme.md
eval/output/all_sessions/csv/: base_position_error.csv  mean_position_error.csv  results.csv  rotation_error.csv  tip_position_error.csv
eval/output/csv/: base_position_error.csv  mean_position_error.csv  results.csv  rotation_error.csv  tip_position_error.csv
eval/output/latex/: latex_base_position_error.tex  latex_mean_position_error.tex  latex_rotation_error.tex  latex_tip_position_error.tex
eval/rhino/: LABELS_TOOLS_HOLES.txt  ttool_prob_plate.acim
eval/script/: compute.py  compute_error.py  compute_ux.py  io_stream.py  util.py  visuals.py
eval/script/acc_estim_pose/: compute.py  err_compute.py  io_stream.py  util.py  visuals.py
include/: camera.hh  classifier.hh  config.hh  d_model_manager.hh  event.hh  histogram.hh  input.hh  m_func.hh  model.hh  object3d.hh  object_tracker.hh  pose_writer.hh  search_line.hh  shader.hh  signed_distance_transform2d.hh  tclc_histograms.hh  template_view.hh  tracker.hh  tracker_sle.hh  transformations.hh  ttool.hh  ttool_exports.hh  util.hh  view.hh  viewer.hh  visualizer.hh
install/lib/cmake/ttool/: TToolConfig.cmake.in  ttoolConfig.cmake.in
live_camera/: calibration_orange_A_1280_720_r.yml  calibration_orange_B_1280_720_r.yml  config copy.yml  config.yml  gt_pose copy.txt  gt_pose.txt  input_pose.txt
src/: PREAPI_main.cc  attemp.object_tracker.hh  camera.cc  camera.hh  classifier.cc  config.hh  d_model_manager.cc  d_model_manager.hh  global_param.cc  global_param.hh  histogram.cc  input.hh  m_func.cc  main.cc  model.cc  object3d.cc  object_tracker.cc  object_tracker.hh  pose_io.hh  pose_writer.hh  search_line.cc  signed_distance_transform2d.cc  tclc_histograms.cc  template_view.cc  tracker.cc  tracker.hh  tracker_sle.cc  tracker_sle.hh  transformations.cc  ttool.cc  ttool.hh  util.hh  view.cc  view.hh  viewer.cc  viewer.hh  visualizer.hh
util/: download_dataset.sh  extract_libtorch.sh  load_dataset_2_config.py  load_dataset_2_config.sh  load_labels_2_config.py
util/rhino_models/: reworkingbladesACITs.3dm  sawbladetest.3dm  sawbladetest.3dm.rhl  sawbladetest.3dmbak
